--- a/src/app/styles/menu.css
+++ b/src/app/styles/menu.css
@@ -16,6 +16,11 @@
     right: 0;
 }
 
+.menu-statistics {
+    display: flex;
+    justify-content: space-between;
+}
+
 .menu-layout {
     margin-bottom: 20px;
     background: #0f1118;
@@ -59,6 +64,24 @@
     border-bottom-color: var(--main-menu-color);
     border-right-color: var(--main-menu-color);
     transform: rotate(45deg);
+}
+
+.menu-info {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+}
+
+.menu-info-card {
+    background: #0c0c0c;
+    border-radius: 7px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 110px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu-buttons-up {
