--- a/src/app/window.html
+++ b/src/app/window.html
@@ -52,17 +52,17 @@
                 </div>
                 <div class="menu-info-card">
                     <span class="language-depend" translation="menu-maps"></span>
-                    :&ensp;
+                    :&nbsp;
                     <span id="menu-info-maps-value">0</span>
                 </div>
                 <div class="menu-info-card">
                     <span class="language-depend" translation="menu-mods"></span>
-                    :&ensp;
+                    :&nbsp;
                     <span id="menu-info-mods-value">0</span>
                 </div>
                 <div class="menu-info-card">
                     <span class="language-depend" translation="menu-plugins"></span>
-                    :&ensp;
+                    :&nbsp;
                     <span id="menu-info-plugins-value">0</span>
                 </div>
             </div>
